# new-balance-hackathon-2026

./: .gitignore
.claude/: settings.json
backend/: pyproject.toml
backend/src/: config.py  main.py
backend/src/routers/: feedback.py  reroll.py  search.py  tryon.py
backend/src/services/: catalog.py  feedback_store.py  image_gen.py  vibe_matcher.py
catalog/: products.json
extension/: manifest.json
extension/background/: service-worker.js
extension/content/: content-script.js
extension/lib/: api-client.js  storage.js
extension/popup/: popup.html  popup.js
extension/sidepanel/: sidepanel.css  sidepanel.html  sidepanel.js
